# drf_hw

./: .coverage  .env_example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
fixture/: courses.json  lessons.json  payments.json  users.json
lms/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_courses.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_alter_subscription_course_alter_subscription_user.py
users/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_payment_session_id_and_more.py  0004_alter_payment_date.py
